--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "shared"
   ],
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "typescript": "^5.0.0"
+  },
+  "scripts": {
+    "dev": "concurrently -n \"BE,FE\" -c \"blue,magenta\" \"npm run dev --workspace=backend\" \"npm run dev --workspace=frontend\""
   },
   "dependencies": {
     "zod": "^3.0.0"
