--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "@hono/node-server": "^1.19.8",
     "@hono/zod-validator": "^0.7.6",
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "hono": "^4.11.3",
     "mysql2": "^3.16.0",
     "uuid": "^13.0.0",
