--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.0",
+    "sonner": "^2.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
