[backend][ref]: refacter system and setting supabase

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@hono/node-server": "^1.19.8",
     "@hono/zod-validator": "^0.7.6",
+    "@supabase/supabase-js": "^2.90.1",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "hono": "^4.11.3",
