--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,7 +10,9 @@
       "@app-types/*": ["./src/types/*"],
       "@utils/*": ["./src/utils/*"],
       "@controllers/*": ["./src/controllers/*"],
-      "@routes/*": ["./src/routes/*"]
+      "@routes/*": ["./src/routes/*"],
+      "@config/*": ["./src/config/*"],
+      "@db/*": ["./src/db/*"]
     },
     "strict": true,
     "verbatimModuleSyntax": true,
